--- a/aws_glasswall-test-ck/config.yaml
+++ b/aws_glasswall-test-ck/config.yaml
@@ -9,4 +9,4 @@ s3_harbor_bucket_name: glasswall-test-ck-harbor
 s3_influx_bucket_name: glasswall-test-ck-influxdb
 s3_sc_fluentd_bucket_name: glasswall-test-ck-sc-logs
 s3_velero_bucket_name: glasswall-test-ck-velero
-s3_region: us-west-1
+s3_region: eu-west-1
