--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "icap-infrastructure"]
 	path = icap-infrastructure
 	url = git@github.com:elastisys/icap-infrastructure.git
+[submodule "s-k8-proxy-rebuild"]
+	path = s-k8-proxy-rebuild
+	url = git@github.com:elastisys/s-k8-proxy-rebuild.git
