--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "icap-adaptation-service"]
 	path = icap-adaptation-service
 	url = git@github.com:elastisys/icap-adaptation-service.git
+[submodule "icap-request-processing"]
+	path = icap-request-processing
+	url = git@github.com:elastisys/icap-request-processing.git
