--- a/aws_glasswall-test-ck/sc-config.yaml
+++ b/aws_glasswall-test-ck/sc-config.yaml
@@ -3,7 +3,7 @@ global:
   cloudProvider: aws
   environmentName: glasswall-test-ck
   dnsPrefix: glasswall-test-ck
-  baseDomain: "ck.glasswall-ck8s-proxy.com"
+  baseDomain: "ops.ck.glasswall-ck8s-proxy.com"
   opsDomain: "ops.ck.glasswall-ck8s-proxy.com"
   issuer: letsencrypt-staging
   verifyTls: false
