--- a/aws_glasswall-test-ck/sc-config.yaml
+++ b/aws_glasswall-test-ck/sc-config.yaml
@@ -1,5 +1,5 @@
 global:
-  ck8sVersion: latest
+  ck8sVersion: any
   cloudProvider: aws
   environmentName: glasswall-test-ck
   dnsPrefix: glasswall-test-ck
