--- a/aws_glasswall-test-ck/wc-config.yaml
+++ b/aws_glasswall-test-ck/wc-config.yaml
@@ -5,7 +5,7 @@ global:
   dnsPrefix: glasswall-test-ck
   baseDomain: "ops.ck.glasswall-ck8s-proxy.com"
   opsDomain: "ops.ck.glasswall-ck8s-proxy.com"
-  issuer: letsencrypt-staging
+  issuer: letsencrypt-prod
   verifyTls: false
   storageClass: ebs-gp2
   clusterDns: "10.43.0.10"
