--- a/wip-helmfile-glasswall-icap.yaml
+++ b/wip-helmfile-glasswall-icap.yaml
@@ -26,7 +26,7 @@ releases:
   namespace: icap-adaptation
   labels:
     app: workload-cluster-glasswall-icap
-  chart: /home/jakub/workspace/glasswall/s-k8-proxy-rebuild/stable-src/chart
+  chart: ./s-k8-proxy-rebuild/stable-src/chart
   version: 0.0.1
   missingFileHandler: Error
   # values:
@@ -36,32 +36,32 @@ releases:
   namespace: icap-adaptation
   labels:
     app: workload-cluster-glasswall-icap-adaptation
-  chart: /home/jakub/workspace/glasswall/icap-infrastructure/adaptation
+  chart: ./icap-infrastructure/adaptation
   version: 0.0.1
   missingFileHandler: Error
 
-- name: glasswall-icap-administration
-  namespace: management-ui
-  labels:
-    app: workload-cluster-glasswall-icap-administration-management-ui
-  chart: /home/jakub/workspace/glasswall/icap-infrastructure/administration/management-ui
-  version: 0.0.1
-  missingFileHandler: Error
+# - name: glasswall-icap-administration
+#   namespace: management-ui
+#   labels:
+#     app: workload-cluster-glasswall-icap-administration-management-ui
+#   chart: /home/jakub/workspace/glasswall/icap-infrastructure/administration/management-ui
+#   version: 0.0.1
+#   missingFileHandler: Error
 
-- name: glasswall-icap-administration-transactioneventapi
-  namespace: transaction-event-api
-  labels:
-    app: workload-cluster-glasswall-icap-administration-transactioneventapi
-  chart: /home/jakub/workspace/glasswall/icap-infrastructure/administration/transactioneventapi
-  version: 0.0.1
-  missingFileHandler: Error
+# - name: glasswall-icap-administration-transactioneventapi
+#   namespace: transaction-event-api
+#   labels:
+#     app: workload-cluster-glasswall-icap-administration-transactioneventapi
+#   chart: /home/jakub/workspace/glasswall/icap-infrastructure/administration/transactioneventapi
+#   version: 0.0.1
+#   missingFileHandler: Error
 
-- name: glasswall-icap-nginx-ingress-controller
-  namespace: nginx
-  labels:
-    app: workload-cluster-glasswall-icap-nginx-ingress-controller
-  chart: /home/jakub/workspace/glasswall/icap-infrastructure/nginx-ingress-controller
-  version: 0.0.1
-  missingFileHandler: Error
+# - name: glasswall-icap-nginx-ingress-controller
+#   namespace: nginx
+#   labels:
+#     app: workload-cluster-glasswall-icap-nginx-ingress-controller
+#   chart: /home/jakub/workspace/glasswall/icap-infrastructure/nginx-ingress-controller
+#   version: 0.0.1
+#   missingFileHandler: Error
 
 #{{ end }}
