Also add k8-reverse-proxy

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,7 @@
 [submodule "icap-request-processing"]
 	path = icap-request-processing
 	url = git@github.com:elastisys/icap-request-processing.git
+[submodule "k8-reverse-proxy"]
+	path = k8-reverse-proxy
+	url = https://github.com/k8-proxy/k8-reverse-proxy.git
+	branch = develop
