--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,15 @@
 [submodule "compliantkubernetes"]
 	path = compliantkubernetes
 	url = git@github.com:elastisys/compliantkubernetes
+	branch = master
 [submodule "compliantkubernetes-apps"]
 	path = compliantkubernetes-apps
 	url = git@github.com:elastisys/compliantkubernetes-apps
+	branch = main
 [submodule "ck8s-cluster"]
 	path = ck8s-cluster
 	url = git@github.com:elastisys/ck8s-cluster
+	branch = master
 [submodule "icap-infrastructure"]
 	path = icap-infrastructure
 	url = git@github.com:elastisys/icap-infrastructure.git
