Refresh state after re-run

--- a/aws_glasswall-test-ck/.state/ansible_hosts_sc.ini
+++ b/aws_glasswall-test-ck/.state/ansible_hosts_sc.ini
@@ -19,6 +19,11 @@ public_endpoint='tf-lb-20201106102538456400000003-937107444.eu-west-2.elb.amazon
 cloud_provider='aws'
 cluster_name='glasswall-ck-test-service-cluster'
 
+oidc_issuer_url='https://accounts.google.com/o/oauth2/v2/auth'
+oidc_client_id='kubelogin'
+oidc_username_claim='email'
+oidc_groups_claim='groups'
+
 calico_mtu='1480'
 
 kubeadm_init_extra_args=''
