--- a/aws_glasswall-test-ck/.state/ansible_hosts_wc.ini
+++ b/aws_glasswall-test-ck/.state/ansible_hosts_wc.ini
@@ -1,7 +1,7 @@
-glasswall-ck-test-workload-cluster-master-0 ansible_host=3.11.80.33 private_ip=172.16.1.47
+glasswall-ck-test-workload-cluster-master-0 ansible_host=18.134.11.176 private_ip=172.16.1.213
 
-glasswall-ck-test-workload-cluster-worker-0 ansible_host=3.10.144.121 private_ip=172.16.1.77
-glasswall-ck-test-workload-cluster-worker-1 ansible_host=35.178.225.80 private_ip=172.16.1.160
+glasswall-ck-test-workload-cluster-worker-0 ansible_host=18.134.4.144 private_ip=172.16.1.15
+glasswall-ck-test-workload-cluster-worker-1 ansible_host=18.134.137.246 private_ip=172.16.1.37
 
 
 [all:vars]
@@ -13,11 +13,16 @@ ansible_port=22
 # TODO: move this to ansible.cfg when upgraded to ansible 2.8
 ansible_python_interpreter=/usr/bin/python3
 
-control_plane_endpoint='internal-tf-lb-20201106103712892100000003-2138334120.eu-west-2.elb.amazonaws.com'
+control_plane_endpoint='internal-tf-lb-20201113132721386700000003-1926797680.eu-west-2.elb.amazonaws.com'
 control_plane_port='6443'
-public_endpoint='tf-lb-20201106103712985500000004-2061195792.eu-west-2.elb.amazonaws.com'
+public_endpoint='tf-lb-20201113132721444500000004-1276802003.eu-west-2.elb.amazonaws.com'
 cloud_provider='aws'
 cluster_name='glasswall-ck-test-workload-cluster'
+
+oidc_issuer_url='https://accounts.google.com/o/oauth2/v2/auth'
+oidc_client_id='kubelogin'
+oidc_username_claim='email'
+oidc_groups_claim='groups'
 
 calico_mtu='1480'
 
