--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,8 @@
 	url = git@github.com:elastisys/icap-management-ui.git
 [submodule "icap-adaptation-service"]
 	path = icap-adaptation-service
-	url = git@github.com:elastisys/icap-adaptation-service.git
+	url = git@github.com:cristiklein/icap-adaptation-service.git
+	branch = fixes-for-compliantkubernetes
 [submodule "icap-request-processing"]
 	path = icap-request-processing
 	url = git@github.com:elastisys/icap-request-processing.git
