Add k8-reverse-proxy project as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "icap-request-processing"]
 	path = icap-request-processing
 	url = git@github.com:elastisys/icap-request-processing.git
+[submodule "k8-reverse-proxy"]
+	path = k8-reverse-proxy
+	url = git@github.com:elastisys/k8-reverse-proxy.git
