Update Jakub's deployment config

--- a/aws_glasswall-test-ck/wc-config.yaml
+++ b/aws_glasswall-test-ck/wc-config.yaml
@@ -219,9 +219,9 @@ issuers:
   letsencrypt:
     enabled: true
     prod:
-      email: set-me
+      email: jakub@elastisys.com
     staging:
-      email: set-me
+      email: jakub@elastisys.com
   extraIssuers: []
 certmanager:
   resources: {}
