Use environment variables to set domains

--- a/wip-helmfile-glasswall-icap.yaml
+++ b/wip-helmfile-glasswall-icap.yaml
@@ -29,8 +29,8 @@ releases:
   chart: ./s-k8-proxy-rebuild/stable-src/chart
   version: 0.0.1
   missingFileHandler: Error
-  # values:
-  # - values/workload-cluster-psp-rbac.yaml.gotmpl
+  values:
+  - wip-helmfile-galsswall-icap.yaml.gotmpl
 
 - name: glasswall-icap-adaptation
   namespace: icap-adaptation
