--- a/.gitmodules
+++ b/.gitmodules
@@ -36,3 +36,6 @@
 [submodule "event-submission-service"]
 	path = event-submission-service
 	url = git@github.com:elastisys/event-submission-service.git
+[submodule "pod-janitor"]
+	path = pod-janitor
+	url = git@github.com:elastisys/pod-janitor.git
