--- a/aws_glasswall-kubespray-jk/wc-config/inventory.ini
+++ b/aws_glasswall-kubespray-jk/wc-config/inventory.ini
@@ -2,23 +2,21 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
-sc-node1 ansible_user=ubuntu ansible_host=3.10.162.24 etcd_member_name=etcd1 # Master 1
-sc-node2 ansible_user=ubuntu ansible_host=18.132.200.193
-sc-node3 ansible_user=ubuntu ansible_host=18.133.255.9
+ip-172-16-1-227.eu-west-2.compute.internal ansible_user=ubuntu ansible_host=35.179.95.21 etcd_member_name=etcd1 # Master 1
+ip-172-16-1-231.eu-west-2.compute.internal ansible_user=ubuntu ansible_host=18.133.27.72
 
 # ## configure a bastion host if your nodes are not directly reachable
 # bastion ansible_host=x.x.x.x ansible_user=some_user
 
 [kube-master]
-sc-node1
+ip-172-16-1-227.eu-west-2.compute.internal
 
 [etcd]
-sc-node1
+ip-172-16-1-227.eu-west-2.compute.internal
 
 [kube-node]
-sc-node1
-sc-node2
-sc-node3
+ip-172-16-1-227.eu-west-2.compute.internal
+ip-172-16-1-231.eu-west-2.compute.internal
 
 [calico-rr]
 
