Update Jakub's OVH vSphere CK8s config

--- a/ovh_glasswall-kubespray-jk/wc-config/inventory.ini
+++ b/ovh_glasswall-kubespray-jk/wc-config/inventory.ini
@@ -2,9 +2,10 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
-wc-node1 ansible_user=ubuntu ansible_host=95.54.0.12 etcd_member_name=etcd1 # Master 1
-wc-node2 ansible_user=ubuntu ansible_host=95.54.0.13
-wc-node3 ansible_user=ubuntu ansible_host=95.54.0.14
+; wc-node1 ansible_user=ubuntu ansible_host=51.89.210.149 etcd_member_name=etcd1 ip=172.17.0.1# Master 1
+wc-node1 ansible_user=ubuntu ansible_host=51.89.210.149 etcd_member_name=etcd1# Master 1
+# wc-node2 ansible_user=ubuntu ansible_host=95.54.0.13
+# wc-node3 ansible_user=ubuntu ansible_host=95.54.0.14
 
 # ## configure a bastion host if your nodes are not directly reachable
 # bastion ansible_host=x.x.x.x ansible_user=some_user
@@ -17,8 +18,8 @@ wc-node1
 
 [kube-node]
 wc-node1
-wc-node2
-wc-node3
+# wc-node2
+# wc-node3
 
 [calico-rr]
 
