--- a/ovh_glasswall-kubespray-jk/wc-config/group_vars/k8s-cluster/k8s-cluster.yml
+++ b/ovh_glasswall-kubespray-jk/wc-config/group_vars/k8s-cluster/k8s-cluster.yml
@@ -206,6 +206,7 @@ kube_network_node_prefix: 24
 
 # The port the API Server will be listening on.
 kube_apiserver_ip: "{{ kube_service_addresses|ipaddr('net')|ipaddr(1)|ipaddr('address') }}"
+# kube_apiserver_ip: "127.0.0.1"
 kube_apiserver_port: 6443  # (https)
 # kube_apiserver_insecure_port: 8080  # (http)
 # Set to 0 to disable insecure port - Requires RBAC in authorization_modes and kube_api_anonymous_auth: true
@@ -452,7 +453,7 @@ kubeconfig_localhost: true
 
 ## Supplementary addresses that can be added in kubernetes ssl keys.
 ## That can be useful for example to setup a keepalived virtual IP
-# supplementary_addresses_in_ssl_keys: [10.0.0.1, 10.0.0.2, 10.0.0.3]
+supplementary_addresses_in_ssl_keys: [51.89.210.149]
 
 ## Running on top of openstack vms with cinder enabled may lead to unschedulable pods due to NoVolumeZoneConflict restriction in kube-scheduler.
 ## See https://github.com/kubernetes-sigs/kubespray/issues/2141
