Extend NodePort range to include ICAP port (1344)

--- a/ovh_glasswall-kubespray-jk/wc-config/group_vars/k8s-cluster/k8s-cluster.yml
+++ b/ovh_glasswall-kubespray-jk/wc-config/group_vars/k8s-cluster/k8s-cluster.yml
@@ -716,3 +716,5 @@ enable_nat_default_gateway: true
 # Extra variables that passing to launch.sh, useful for enabling seed mode, see
 # https://www.weave.works/docs/net/latest/tasks/ipam/ipam/
 # weave_extra_args: ~
+
+kube_apiserver_node_port_range: "1344-32767"
