Use vsphere-csi storage class for elasticsearch data node

--- a/ovh_glasswall-kubespray-jk/sc-config.yaml
+++ b/ovh_glasswall-kubespray-jk/sc-config.yaml
@@ -206,7 +206,7 @@ elasticsearch:
   dataNode:
     count: 2
     storageSize: 18Gi
-    storageClass: node-local
+    storageClass: vsphere-csi
     javaOpts: -Xms512m -Xmx512m
     resources:
       requests:
