Disable ck8sdash in workload cluster

--- a/ovh_glasswall-kubespray-jk/wc-config.yaml
+++ b/ovh_glasswall-kubespray-jk/wc-config.yaml
@@ -121,7 +121,7 @@ fluentd:
         affinity: {}
         nodeSelector: {}
 ck8sdash:
-    enabled: true
+    enabled: false
     tolerations: []
     affinity: {}
     nodeSelector: {}
