--- a/wip-helmfile-glasswall-icap.yaml
+++ b/wip-helmfile-glasswall-icap.yaml
@@ -49,6 +49,8 @@ releases:
   chart: ./icap-infrastructure/rabbitmq
   version: 0.0.1
   missingFileHandler: Error
+  values:
+  - wip-helmfile-glasswall-icap-adaptation.yaml.gotmpl
 
 # - name: glasswall-icap-administration
 #   namespace: management-ui
