--- a/aws_glasswall-kubespray-jk/wc-config.yaml
+++ b/aws_glasswall-kubespray-jk/wc-config.yaml
@@ -1,7 +1,7 @@
 global:
     ck8sVersion: any
     cloudProvider: baremetal
-    clusterName: aws-glasswall-ovh-kubespray-wc
+    clusterName: CLUSTER_NAME
     baseDomain: icap-aws.glasswall-ck8s-proxy.com
     opsDomain: ops.glasswall-ck8s-proxy.com
     issuer: letsencrypt-prod
