Create folder for ssh key

--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -85,6 +85,7 @@ jobs:
         cd vmware-scripts/packer
         ssh-keygen -P "" -t rsa -b 4096 -m pem -f temp_ssh_key
         aws ec2 import-key-pair --key-name "packer-glasswall-elastisys-pipeline" --public-key-material fileb://temp_ssh_key.pub
+        mkdir -p ../../compliant-k8s-icap-server-pipeline/wc-config/ssh
         cp temp_ssh_key ../../compliant-k8s-icap-server-pipeline/wc-config/ssh/id_rsa
 
     - name: Build AMI/OVA
