--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -95,7 +95,9 @@ jobs:
         AWS_DEFAULT_REGION: ${{ env.AWS_DEFAULT_REGION }}
       run: |
         cd vmware-scripts/packer
-        echo ${CI_SHA_SHORT}
+        echo ${GITHUB_SHA}
+        export SHA8=${GITHUB_SHA::8}
+        echo ${SHA8}
         PACKER_LOG=1 PACKER_LOG_PATH=packer.log packer build -var-file=aws-vars-pipeline.json aws-ami.json
 
     - name: Delete temporary SSH key
