--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -72,6 +72,10 @@ jobs:
       run: |
         sudo apt install pwgen
 
+    - name: Setup SOPS
+      run: |
+        sudo pip install --upgrade sops
+
     # build artifact
     - name: Setup Packer
       run: |
