Fixup: Update pip

--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -77,6 +77,7 @@ jobs:
         sudo apt update
         sudo apt install python3-pip
         pip3 --version
+        sudo apt-get install python3-setuptools
 
     - name: Setup SOPS
       run: |
