--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -77,10 +77,7 @@ jobs:
         sudo apt update
         sudo apt install python3-pip
         pip3 --version
-        sudo apt-get install build-essential libssl-dev libffi-dev cargo
-        sudo apt install snapd
-        sudo snap install rustup --classic
-        sudo rustup default stable
+        sudo pip install setuptools-rust
 
     - name: Setup SOPS
       run: |
