--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -77,7 +77,7 @@ jobs:
         sudo apt update
         sudo apt install python3-pip
         pip3 --version
-        pip install setuptools-rust
+        pip3 install setuptools-rust
 
     - name: Setup SOPS
       run: |
