--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -77,8 +77,8 @@ jobs:
         sudo apt update
         sudo apt install python3-pip
         pip3 --version
-        sudo pip3 install setuptools-rust setuptools
-        sudo -H pip install setuptools-rust setuptools
+        sudo -H pip3 install setuptools-rust setuptools
+        sudo -H pip install setuptools
 
     - name: Setup SOPS
       run: |
