--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -77,12 +77,13 @@ jobs:
         sudo apt update
         sudo apt install python3-pip
         pip3 --version
-        sudo -H pip3 install setuptools-rust setuptools
-        sudo -H pip install setuptools
+        sudo pip3 install setuptools-rust setuptools
+        sudo -H pip install setuptools-rust setuptools
 
     - name: Setup SOPS
       run: |
         sudo pip install --upgrade sops
+        sops --version
 
     # build artifact
     - name: Setup Packer
