--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -82,7 +82,9 @@ jobs:
 
     - name: Setup SOPS
       run: |
-        sudo pip install --upgrade sops
+        # sudo pip install --upgrade sops
+        go version
+        go get -u go.mozilla.org/sops/cmd/sops
         sops --version
 
     # build artifact
