Fixup: Install SOPS 2

--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -84,7 +84,7 @@ jobs:
       run: |
         # sudo pip install --upgrade sops
         go version
-        go get -u go.mozilla.org/sops/cmd/sops
+        sudo go get -u go.mozilla.org/sops/cmd/sops
         sops --version
 
     # build artifact
