--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -87,6 +87,13 @@ jobs:
         sudo chmod a+x /usr/local/bin/sops
         sops --version
 
+    - name: Setup yq
+      run: |
+        sudo curl -L -o yq https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64
+        sudo mv yq /usr/local/bin
+        sudo chmod a+x /usr/local/bin/yq
+        yq --version
+
     # build artifact
     - name: Setup Packer
       run: |
