--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -25,7 +25,7 @@ on:
         default: "true"
         required: true
   push:
-    branches: [ packer-aws ]
+    branches: [ ck8s_apps_v0.10.0 ]
     paths-ignore:
       - 'aws_glasswal-kubespray-jk'
       - 'aws_glasswal-test-ck'
